# ff-vibes

./: .pre-commit-config.yaml  Makefile  README.md  out.csv  pyproject.toml
data/: players.csv  raw.csv
scripts/: load_players.py
src/ff_vibes/: __init__.py  app.py  pipeline.py  players.py  scorer.py
src/ff_vibes/templates/: index.html
tests/: conftest.py  test_api.py  test_pipeline.py  test_scorer.py
