[project]
name = "ff-vibes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Riccio", email = "tylerriccio8@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ff-vibes = "ff_vibes:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
