[project]
name = "ff-vibes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Riccio", email = "tylerriccio8@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask>=3.1.3",
    "nflreadpy",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[project.scripts]
ff-vibes = "ff_vibes:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.56.0",
    "ruff>=0.15.6",
    "pytest",
]
